FIX - dark mode

--- a/themes/material/blueprint/materialblueprintnew.css
+++ b/themes/material/blueprint/materialblueprintnew.css
@@ -23,12 +23,12 @@
 .aurora-drawer-right,
 .aurora-drawer-left {
     position: fixed;
-    background: #fff;
+    background: var(--md-sys-color-surface);
     overflow: auto;
 }
 
-.bordered.aurora-drawer-left {border-right: 1px solid rgba(0, 0, 0, .12);}
-.bordered.aurora-drawer-right {border-left: 1px solid rgba(0, 0, 0, .12);}
+.bordered.aurora-drawer-left {border-right: 1px solid var(--md-sys-color-surface-variant);}
+.bordered.aurora-drawer-right {border-left: 1px solid var(--md-sys-color-surface-variant);}
 
 .aurora-drawer-left  { left: 0;}
 .aurora-drawer-right { right: 0;}
@@ -38,6 +38,7 @@
     height: 100%;
     min-height: 100vh;
     background: #fafafa;
+    background: var(--md-sys-color-surface);
 }
 
 .animate .aurora-content {
